FF layout bug

--- a/sass/_downloads.scss
+++ b/sass/_downloads.scss
@@ -64,6 +64,7 @@
     }
 
     li {
+      display:inline-block;
       .logo-bg {
         background: #E1F0F8;
 
