--- a/styles/main.css
+++ b/styles/main.css
@@ -1809,62 +1809,66 @@ section h1 + p {
     margin: 0 20px 50px;
   }
 }
-/* line 67, ../sass/_downloads.scss */
+/* line 66, ../sass/_downloads.scss */
+#wrap #downloads .wrapper li, #wrap [data-id="downloads"] .wrapper li {
+  display: inline-block;
+}
+/* line 69, ../sass/_downloads.scss */
 #wrap #downloads .wrapper li .logo-bg, #wrap [data-id="downloads"] .wrapper li .logo-bg {
   background: #E1F0F8;
 }
-/* line 70, ../sass/_downloads.scss */
+/* line 72, ../sass/_downloads.scss */
 #wrap #downloads .wrapper li .logo-bg.dark, #wrap [data-id="downloads"] .wrapper li .logo-bg.dark {
   background: #617078;
 }
-/* line 74, ../sass/_downloads.scss */
+/* line 76, ../sass/_downloads.scss */
 #wrap #downloads .wrapper li.col-3, #wrap [data-id="downloads"] .wrapper li.col-3 {
   width: 285px;
   padding-right: 10px;
 }
-/* line 77, ../sass/_downloads.scss */
+/* line 79, ../sass/_downloads.scss */
 #wrap #downloads .wrapper li.col-3:last-of-type, #wrap [data-id="downloads"] .wrapper li.col-3:last-of-type {
   padding-right: 0;
 }
 @media screen and (max-width: 600px) {
-  /* line 74, ../sass/_downloads.scss */
+  /* line 76, ../sass/_downloads.scss */
   #wrap #downloads .wrapper li.col-3, #wrap [data-id="downloads"] .wrapper li.col-3 {
     margin: 0 auto;
     width: 100%;
   }
-  /* line 83, ../sass/_downloads.scss */
+  /* line 85, ../sass/_downloads.scss */
   #wrap #downloads .wrapper li.col-3:last-of-type, #wrap [data-id="downloads"] .wrapper li.col-3:last-of-type {
     padding-right: 20px;
   }
 }
-/* line 88, ../sass/_downloads.scss */
+/* line 90, ../sass/_downloads.scss */
 #wrap #downloads .wrapper li.col-4, #wrap [data-id="downloads"] .wrapper li.col-4 {
   width: 209px;
   padding-right: 14px;
 }
-/* line 91, ../sass/_downloads.scss */
+/* line 93, ../sass/_downloads.scss */
 #wrap #downloads .wrapper li.col-4:last-of-type, #wrap [data-id="downloads"] .wrapper li.col-4:last-of-type {
   padding-right: 0;
 }
 @media screen and (max-width: 600px) {
-  /* line 88, ../sass/_downloads.scss */
+  /* line 90, ../sass/_downloads.scss */
   #wrap #downloads .wrapper li.col-4, #wrap [data-id="downloads"] .wrapper li.col-4 {
     margin: 0 auto;
     width: 100%;
   }
-  /* line 97, ../sass/_downloads.scss */
+  /* line 99, ../sass/_downloads.scss */
   #wrap #downloads .wrapper li.col-4:last-of-type, #wrap [data-id="downloads"] .wrapper li.col-4:last-of-type {
     padding-right: 20px;
   }
 }
-/* line 103, ../sass/_downloads.scss */
+/* line 105, ../sass/_downloads.scss */
 #wrap #downloads .wrapper li .download, #wrap [data-id="downloads"] .wrapper li .download {
   margin-top: 10px;
   color: #4f4f4f;
   font-size: 14px;
   font-weight: 300;
 }
-/* line 109, ../sass/_downloads.scss */
+/* line 111, ../sass/_downloads.scss */
 #wrap #downloads .wrapper li .download a, #wrap [data-id="downloads"] .wrapper li .download a {
   color: #4f4f4f;
   text-decoration: none;
@@ -1872,71 +1876,71 @@ section h1 + p {
   font-size: 13px;
   font-weight: 600;
 }
-/* line 116, ../sass/_downloads.scss */
+/* line 118, ../sass/_downloads.scss */
 #wrap #downloads .wrapper li .download a:first-of-type, #wrap [data-id="downloads"] .wrapper li .download a:first-of-type {
   border-right: 1px solid #414141;
   padding-right: 4px;
   margin-right: 1px;
   margin-left: 2px;
 }
-/* line 126, ../sass/_downloads.scss */
+/* line 128, ../sass/_downloads.scss */
 #wrap #downloads .wrapper #horizontal li, #wrap [data-id="downloads"] .wrapper #horizontal li {
   height: 150px;
 }
-/* line 128, ../sass/_downloads.scss */
+/* line 130, ../sass/_downloads.scss */
 #wrap #downloads .wrapper #horizontal li .logo-bg, #wrap [data-id="downloads"] .wrapper #horizontal li .logo-bg {
   height: 105px;
 }
-/* line 131, ../sass/_downloads.scss */
+/* line 133, ../sass/_downloads.scss */
 #wrap #downloads .wrapper #horizontal li img, #wrap [data-id="downloads"] .wrapper #horizontal li img {
   margin-top: 38px;
   width: 190px;
 }
-/* line 137, ../sass/_downloads.scss */
+/* line 139, ../sass/_downloads.scss */
 #wrap #downloads .wrapper #vertical li, #wrap [data-id="downloads"] .wrapper #vertical li {
   height: 200px;
 }
-/* line 139, ../sass/_downloads.scss */
+/* line 141, ../sass/_downloads.scss */
 #wrap #downloads .wrapper #vertical li .logo-bg, #wrap [data-id="downloads"] .wrapper #vertical li .logo-bg {
   height: 130px;
 }
-/* line 142, ../sass/_downloads.scss */
+/* line 144, ../sass/_downloads.scss */
 #wrap #downloads .wrapper #vertical li img, #wrap [data-id="downloads"] .wrapper #vertical li img {
   margin-top: 33px;
   width: 110px;
 }
-/* line 148, ../sass/_downloads.scss */
+/* line 150, ../sass/_downloads.scss */
 #wrap #downloads .wrapper #badgeA, #wrap [data-id="downloads"] .wrapper #badgeA {
   margin-top: 10px;
   margin-bottom: 75px;
 }
-/* line 151, ../sass/_downloads.scss */
+/* line 153, ../sass/_downloads.scss */
 #wrap #downloads .wrapper #badgeA li, #wrap [data-id="downloads"] .wrapper #badgeA li {
   height: 150px;
 }
-/* line 154, ../sass/_downloads.scss */
+/* line 156, ../sass/_downloads.scss */
 #wrap #downloads .wrapper #badgeA .logo-bg, #wrap [data-id="downloads"] .wrapper #badgeA .logo-bg {
   height: 93px;
 }
-/* line 157, ../sass/_downloads.scss */
+/* line 159, ../sass/_downloads.scss */
 #wrap #downloads .wrapper #badgeA img, #wrap [data-id="downloads"] .wrapper #badgeA img {
   margin-top: 30px;
   width: 120px;
 }
-/* line 163, ../sass/_downloads.scss */
+/* line 165, ../sass/_downloads.scss */
 #wrap #downloads .wrapper #badgeB, #wrap [data-id="downloads"] .wrapper #badgeB {
   margin-top: 10px;
   margin-bottom: 75px;
 }
-/* line 166, ../sass/_downloads.scss */
+/* line 168, ../sass/_downloads.scss */
 #wrap #downloads .wrapper #badgeB li, #wrap [data-id="downloads"] .wrapper #badgeB li {
   height: 260px;
 }
-/* line 169, ../sass/_downloads.scss */
+/* line 171, ../sass/_downloads.scss */
 #wrap #downloads .wrapper #badgeB .logo-bg, #wrap [data-id="downloads"] .wrapper #badgeB .logo-bg {
   height: 195px;
 }
-/* line 172, ../sass/_downloads.scss */
+/* line 174, ../sass/_downloads.scss */
 #wrap #downloads .wrapper #badgeB img, #wrap [data-id="downloads"] .wrapper #badgeB img {
   margin-top: 33px;
   width: 128px;
